# code-summarizer

./: .dockerignore  .gitignore  Code Summarizer.postman_collection.json  Dockerfile.back  Dockerfile.front  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
back/: Analyse Code request example.postman_collection.json  app.py
back/code_summarizer_api/: Dockerfile  app.py  pyproject.toml
back/code_summarizer_api/main/: analyse.py
back/main/: analyse.py
front/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
