[tool.poetry]
name = "code-summarizer-api"
version = "0.1.0"
description = ""
authors = ["Suwi-inc <suwilanjisilwamba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
